# oppressor

./: .gitignore  README.md
.github/: FUNDING.yml
Controls/: README.md  main.py  pyproject.toml
Firmware/: platformio.ini
Firmware/src/: main.cpp  motors.cpp  motors.h  server.cpp  server.h  status.cpp  status.h
Models/: Camera_mount.stl  Camera_mount_cover.stl  Oppressor_body.step  Oppressor_body.stl
PCB/: Oppressor_pcb.brd  Oppressor_pcb.sch
SteamDeckControl/: main.py  protocol.py  pyproject.toml
VideoStream/: Cargo.toml
VideoStream/src/: main.rs
