[tool.poetry]
name = "oppressor"
version = "0.1.0"
description = "The Feline Discomfort Bot"
authors = ["Mateusz Russak <mateusz@russak.biz>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyjoystick = "^1.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
